tests/reference/ast-loop_test2-c76adc4.stderr
tokenizer error: Expecting terminating symbol for subroutine
 --> tests/loop_test2.f:9:1
  |
9 | <<<<<<< HEAD
  | ^ 
